Fix menu overflow.

--- a/content/stylesheets/main.less
+++ b/content/stylesheets/main.less
@@ -111,7 +111,7 @@ nav {
     }
 
     &:last-child:after {
-      content: "";
+      display: none;
     }
 
     a {
